@@ -4,18 +4,18 @@ SUBDIRS = cupsdconf2
 
 INCLUDES= -I$(top_srcdir) -I$(top_srcdir)/kio -I$(top_srcdir)/kfile -I$(top_srcdir)/kdeprint -I$(top_srcdir)/kdeprint/management $(all_includes)
 
-kde_module_LTLIBRARIES = libkdeprint_cups.la
+kde_module_LTLIBRARIES = kdeprint_cups.la
 
-libkdeprint_cups_la_SOURCES = cupsinfos.cpp ipprequest.cpp kmcupsfactory.cpp kmcupsjobmanager.cpp \
+kdeprint_cups_la_SOURCES = cupsinfos.cpp ipprequest.cpp kmcupsfactory.cpp kmcupsjobmanager.cpp \
 			      kmcupsmanager.cpp kmcupsuimanager.cpp kmpropbanners.cpp kmwbanners.cpp kmwipp.cpp \
 			      kmwippselect.cpp kcupsprinterimpl.cpp kmcupsconfig.cpp kmcupsconfigwidget.cpp \
 			      kmconfigcups.cpp kmconfigcupsdir.cpp kmwippprinter.cpp kmwfax.cpp kmwquota.cpp \
 			      kmpropquota.cpp kmwusers.cpp kmpropusers.cpp kpschedulepage.cpp image.cpp \
 				  imagepreview.cpp imageposition.cpp marginpreview.cpp kpimagepage.cpp marginwidget.cpp \
 				  kptextpage.cpp kphpgl2page.cpp cupsaddsmb2.cpp kmwother.cpp ippreportdlg.cpp
-libkdeprint_cups_la_LDFLAGS = $(all_libraries) -module -avoid-version -no-undefined
-libkdeprint_cups_la_LIBADD = $(top_builddir)/kdeprint/management/libkdeprint_management.la $(LIB_KDEUI) $(LIB_KIO) $(LIB_CUPS)
-libkdeprint_cups_la_METASOURCES = AUTO
+kdeprint_cups_la_LDFLAGS = $(all_libraries) -module -avoid-version -no-undefined
+kdeprint_cups_la_LIBADD = $(top_builddir)/kdeprint/management/libkdeprint_management.la $(LIB_KDEUI) $(LIB_KIO) $(LIB_CUPS)
+kdeprint_cups_la_METASOURCES = AUTO
 
 noinst_HEADERS = cupsinfos.h ipprequest.h kmcupsfactory.h kmcupsjobmanager.h kmcupsmanager.h kmcupsuimanager.h \
 		 kmpropbanners.h kmwbanners.h kmwipp.h kmwippselect.h kcupsprinterimpl.h kmcupsconfig.h \
