@@ -1,17 +1,17 @@
 INCLUDES= -I$(top_srcdir) -I$(top_srcdir)/kdeprint -I$(top_srcdir)/kdeprint/management $(all_includes)
 
-kde_module_LTLIBRARIES = libkdeprint_lpr.la
+kde_module_LTLIBRARIES = kdeprint_lpr.la
 
-libkdeprint_lpr_la_SOURCES = printcapreader.cpp lprhandler.cpp \
+kdeprint_lpr_la_SOURCES = printcapreader.cpp lprhandler.cpp \
 			     matichandler.cpp klprfactory.cpp kmlprmanager.cpp \
 			     kmlpruimanager.cpp lpchelper.cpp lpqhelper.cpp \
 			     kmlprjobmanager.cpp matichelper.cpp \
 			     klprprinterimpl.cpp printcapentry.cpp \
 			     lprsettings.cpp kmconfiglpr.cpp apshandler.cpp \
 			     lprngtoolhandler.cpp
-libkdeprint_lpr_la_LDFLAGS = $(all_libraries) -module -avoid-version -no-undefined
-libkdeprint_lpr_la_LIBADD = $(top_builddir)/kdeprint/management/libkdeprint_management.la $(LIB_KDEUI) $(top_builddir)/kdecore/libkdefakes.la
-libkdeprint_lpr_la_METASOURCES = AUTO
+kdeprint_lpr_la_LDFLAGS = $(all_libraries) -module -avoid-version -no-undefined
+kdeprint_lpr_la_LIBADD = $(top_builddir)/kdeprint/management/libkdeprint_management.la $(LIB_KDEUI) $(top_builddir)/kdecore/libkdefakes.la
+kdeprint_lpr_la_METASOURCES = AUTO
 
 noinst_HEADERS = printcapentry.h printcapreader.h lprhandler.h \
 		 matichandler.h klprfactory.h kmlprmanager.h \
