@@ -410,3 +410,14 @@ Since 2.2 release, Michael Goffioul <goffioul@imec.be>
 18/02/2002 Michael Goffioul <goffioul@imec.be>
   * general: simple printer filtering mechanism based on printer name
     and location regexp. Graphical configuration for printer name.
+
+19/02/2002 Michael Goffioul <goffioul@imec.be>
+  * general:
+  	. completion of the printer filtering mechanism (added location
+	  string filter)
+	. notification system between applications when config file has
+	  changed
+	. possibility to open the main option dialog from print dialog
+	  (for example to change the filter or default preview program)
+	. added icon on push buttons when useful
+	. changed plugin names to kdeprint_* (stripped the leading "lib")
